@@ -1,160 +1,131 @@
 package com.agrorental.payment.service;
 
-import com.agrorental.booking.entity.Booking;
-import com.agrorental.booking.entity.BookingStatus;
-import com.agrorental.booking.repository.BookingRepository;
-import com.agrorental.common.exception.BadRequestException;
+import com.agrorental.booking.dto.BookingResponse;
+import com.agrorental.booking.service.BookingService;
 import com.agrorental.common.exception.ResourceNotFoundException;
+import com.agrorental.farmer.dto.FarmerProfileResponse;
+import com.agrorental.farmer.service.FarmerProfileService;
 import com.agrorental.notification.service.NotificationService;
-import com.agrorental.payment.dto.PartnerEarningsSummary;
-import com.agrorental.payment.dto.PaymentCreateRequest;
-import com.agrorental.payment.dto.PaymentResponse;
-import com.agrorental.payment.entity.PaymentTransaction;
-import com.agrorental.payment.enums.PaymentStatus;
+import com.agrorental.payment.dto.*;
+import com.agrorental.payment.entity.Payment;
+import com.agrorental.payment.entity.PaymentMethod;
+import com.agrorental.payment.entity.PaymentStatus;
 import com.agrorental.payment.repository.PaymentRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-/**
- * Service managing financial transactions, amount verification, duplicate protection, and earnings reporting.
- */
 @Service
 @Transactional
 public class PaymentService {
 
     private final PaymentRepository paymentRepository;
-    private final BookingRepository bookingRepository;
-    private final NotificationService notificationService;
+    private final BookingService bookingService;
+    private final FarmerProfileService farmerProfileService;
+    
+    @Autowired(required = false)
+    private NotificationService notificationService;
 
-    public PaymentService(
-            PaymentRepository paymentRepository,
-            BookingRepository bookingRepository,
-            NotificationService notificationService) {
+    public PaymentService(PaymentRepository paymentRepository,
+                          BookingService bookingService,
+                          FarmerProfileService farmerProfileService) {
         this.paymentRepository = paymentRepository;
-        this.bookingRepository = bookingRepository;
-        this.notificationService = notificationService;
+        this.bookingService = bookingService;
+        this.farmerProfileService = farmerProfileService;
     }
 
-    /**
-     * Processes a simulated payment transaction for a confirmed booking.
-     */
-    public PaymentResponse createPayment(PaymentCreateRequest request) {
-        Booking booking = bookingRepository.findById(request.getBookingId())
-                .orElseThrow(() -> new ResourceNotFoundException("Booking not found with ID: " + request.getBookingId()));
+    @Transactional
+    public PaymentResponse processPayment(PaymentRequest request) {
+        BookingResponse booking = bookingService.getBookingById(request.getBookingId());
 
-        if (!booking.getFarmerId().equals(request.getFarmerId())) {
-            throw new BadRequestException("Farmer is not authorized to pay for booking #" + request.getBookingId());
-        }
+        String transactionId = "TXN-" + System.currentTimeMillis() + "-" + UUID.randomUUID().toString().substring(0, 6).toUpperCase();
+        String invoiceRef = "INV-2026-" + String.format("%05d", System.currentTimeMillis() % 100000);
 
-        if (booking.getStatus() == BookingStatus.CANCELLED || booking.getStatus() == BookingStatus.REJECTED) {
-            throw new BadRequestException("Cannot process payment for booking in state: " + booking.getStatus());
-        }
-
-        if (paymentRepository.existsByBookingIdAndPaymentStatus(booking.getId(), PaymentStatus.SUCCESS)) {
-            throw new BadRequestException("Payment has already been completed for booking #" + booking.getId());
-        }
-
-        if (request.getAmount() != null && request.getAmount().compareTo(booking.getTotalCost()) != 0) {
-            throw new BadRequestException("Payment amount mismatch. Expected: " + booking.getTotalCost() + ", Provided: " + request.getAmount());
-        }
-
-        Long partnerId = booking.getPartner() != null ? booking.getPartner().getId() : 1L;
-        PaymentStatus status = Boolean.TRUE.equals(request.getSimulateFailure()) ? PaymentStatus.FAILED : PaymentStatus.SUCCESS;
-        String reference = "TXN-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase();
-        String method = request.getPaymentMethod() != null ? request.getPaymentMethod() : "SIMULATED_UPI";
-
-        PaymentTransaction transaction = PaymentTransaction.builder()
-                .bookingId(booking.getId())
-                .farmerId(booking.getFarmerId())
-                .partnerId(partnerId)
-                .amount(booking.getTotalCost())
-                .paymentStatus(status)
-                .paymentReference(reference)
-                .paymentMethod(method)
+        Payment payment = Payment.builder()
+                .bookingId(request.getBookingId())
+                .farmerId(request.getFarmerId())
+                .partnerId(booking != null ? booking.getPartnerId() : 1L)
+                .amount(request.getAmount())
+                .paymentMethod(request.getPaymentMethod() != null ? request.getPaymentMethod() : PaymentMethod.UPI)
+                .paymentReference(transactionId)
+                .transactionId(transactionId)
+                .paymentStatus(PaymentStatus.SUCCESS)
+                .paymentDate(LocalDateTime.now())
+                .invoiceReference(invoiceRef)
                 .build();
 
-        PaymentTransaction saved = paymentRepository.save(transaction);
-        String equipName = booking.getEquipment() != null ? booking.getEquipment().getName() : "Machinery";
+        Payment saved = paymentRepository.save(payment);
 
-        if (status == PaymentStatus.SUCCESS) {
-            notificationService.sendNotification(
-                    "FARMER",
-                    booking.getFarmerId(),
-                    "Payment Successful",
-                    "Payment of ₹" + saved.getAmount() + " for booking #" + booking.getId() + " (" + equipName + ") was successful. Reference: " + reference,
-                    "PAYMENT_SUCCESS",
-                    booking.getId()
-            );
-
-            notificationService.sendNotification(
-                    "PARTNER",
-                    partnerId,
-                    "Rental Revenue Credited",
-                    "Rental payment of ₹" + saved.getAmount() + " for booking #" + booking.getId() + " (" + equipName + ") has been credited.",
-                    "PAYMENT_RECEIVED",
-                    booking.getId()
-            );
-        } else {
-            notificationService.sendNotification(
-                    "FARMER",
-                    booking.getFarmerId(),
-                    "Payment Failed",
-                    "Payment attempt for booking #" + booking.getId() + " failed. Please try again.",
-                    "PAYMENT_FAILED",
-                    booking.getId()
-            );
+        if (notificationService != null && booking != null) {
+            try {
+                notificationService.sendNotification(
+                        "FARMER",
+                        booking.getFarmerId(),
+                        "Payment Successful",
+                        "Payment of ₹" + saved.getAmount() + " for booking #" + booking.getId() + " was successful.",
+                        "PAYMENT_SUCCESS",
+                        booking.getId()
+                );
+            } catch (Exception ignored) {}
         }
 
-        return mapToResponse(saved, equipName);
+        return mapToResponse(saved);
     }
 
-    /**
-     * Retrieves transaction by payment primary key.
-     */
+    @Transactional
+    public PaymentResponse createPayment(PaymentCreateRequest request) {
+        PaymentRequest req = PaymentRequest.builder()
+                .bookingId(request.getBookingId())
+                .farmerId(request.getFarmerId())
+                .amount(request.getAmount())
+                .paymentMethod(PaymentMethod.UPI)
+                .build();
+        return processPayment(req);
+    }
+
     @Transactional(readOnly = true)
     public PaymentResponse getPaymentById(Long id) {
-        PaymentTransaction transaction = paymentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Payment transaction not found with ID: " + id));
-        return mapToResponse(transaction, getEquipmentName(transaction.getBookingId()));
+        Payment payment = paymentRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Payment not found with ID: " + id));
+        return mapToResponse(payment);
     }
 
-    /**
-     * Retrieves transaction by booking ID.
-     */
     @Transactional(readOnly = true)
     public PaymentResponse getPaymentByBookingId(Long bookingId) {
-        PaymentTransaction transaction = paymentRepository.findByBookingId(bookingId)
+        Payment payment = paymentRepository.findByBookingId(bookingId)
                 .orElseThrow(() -> new ResourceNotFoundException("No payment transaction found for booking ID: " + bookingId));
-        return mapToResponse(transaction, getEquipmentName(bookingId));
+        return mapToResponse(payment);
     }
 
-    /**
-     * Retrieves payment history for a specific farmer.
-     */
+    @Transactional(readOnly = true)
+    public List<PaymentResponse> getFarmerPayments(Long farmerId) {
+        return paymentRepository.findByFarmerIdOrderByPaymentDateDesc(farmerId)
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+    }
+
     @Transactional(readOnly = true)
     public List<PaymentResponse> getPaymentsByFarmer(Long farmerId) {
-        return paymentRepository.findByFarmerIdOrderByCreatedAtDesc(farmerId).stream()
-                .map(tx -> mapToResponse(tx, getEquipmentName(tx.getBookingId())))
-                .toList();
+        return getFarmerPayments(farmerId);
     }
 
-    /**
-     * Retrieves revenue transactions for a specific partner.
-     */
     @Transactional(readOnly = true)
     public List<PaymentResponse> getPaymentsByPartner(Long partnerId) {
-        return paymentRepository.findByPartnerIdOrderByCreatedAtDesc(partnerId).stream()
-                .map(tx -> mapToResponse(tx, getEquipmentName(tx.getBookingId())))
-                .toList();
+        return paymentRepository.findByPartnerIdOrderByCreatedAtDesc(partnerId)
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
-    /**
-     * Calculates total realized earnings summary for a partner.
-     */
     @Transactional(readOnly = true)
     public PartnerEarningsSummary getPartnerEarningsSummary(Long partnerId) {
         BigDecimal total = paymentRepository.sumAmountByPartnerIdAndStatus(partnerId, PaymentStatus.SUCCESS);
@@ -166,25 +137,82 @@ public class PaymentService {
                 .build();
     }
 
-    private String getEquipmentName(Long bookingId) {
-        return bookingRepository.findById(bookingId)
-                .map(b -> b.getEquipment() != null ? b.getEquipment().getName() : "Machinery")
-                .orElse("Machinery");
+    @Transactional(readOnly = true)
+    public InvoiceResponse generateInvoice(Long bookingId) {
+        BookingResponse booking = bookingService.getBookingById(bookingId);
+        Payment payment = paymentRepository.findByBookingId(bookingId)
+                .orElseGet(() -> {
+                    String txn = "TXN-" + System.currentTimeMillis();
+                    String inv = "INV-2026-" + String.format("%05d", bookingId);
+                    return Payment.builder()
+                            .bookingId(bookingId)
+                            .farmerId(booking.getFarmerId())
+                            .partnerId(booking.getPartnerId() != null ? booking.getPartnerId() : 1L)
+                            .amount(booking.getTotalCost() != null ? booking.getTotalCost() : BigDecimal.valueOf(1500))
+                            .paymentMethod(PaymentMethod.UPI)
+                            .transactionId(txn)
+                            .paymentReference(txn)
+                            .paymentStatus(PaymentStatus.SUCCESS)
+                            .paymentDate(LocalDateTime.now())
+                            .invoiceReference(inv)
+                            .build();
+                });
+
+        FarmerProfileResponse farmer = null;
+        try {
+            farmer = farmerProfileService.getProfile(booking.getFarmerId());
+        } catch (Exception e) {
+            // Fallback
+        }
+
+        long days = 1;
+        if (booking.getStartDate() != null && booking.getEndDate() != null) {
+            days = Math.max(1, ChronoUnit.DAYS.between(booking.getStartDate(), booking.getEndDate()) + 1);
+        }
+
+        BigDecimal total = payment.getAmount() != null ? payment.getAmount() : BigDecimal.valueOf(1500);
+        BigDecimal subtotal = total.multiply(BigDecimal.valueOf(0.82)).setScale(2, RoundingMode.HALF_UP);
+        BigDecimal gst = total.subtract(subtotal);
+        BigDecimal rate = subtotal.divide(BigDecimal.valueOf(days), 2, RoundingMode.HALF_UP);
+
+        return InvoiceResponse.builder()
+                .invoiceReference(payment.getInvoiceReference())
+                .transactionId(payment.getTransactionId())
+                .bookingId(booking.getId())
+                .farmerId(booking.getFarmerId())
+                .farmerName(farmer != null ? farmer.getFullName() : "Farmer #" + booking.getFarmerId())
+                .farmerMobile(farmer != null ? farmer.getMobileNumber() : "N/A")
+                .equipmentName(booking.getEquipmentName())
+                .equipmentCategory(booking.getEquipmentCategory())
+                .partnerName("Partner #" + (booking.getPartnerId() != null ? booking.getPartnerId() : 1))
+                .bookingStartDate(booking.getStartDate())
+                .bookingEndDate(booking.getEndDate())
+                .rentalRatePerDay(rate)
+                .rentalDays(days)
+                .subtotal(subtotal)
+                .gstAmount(gst)
+                .totalAmount(total)
+                .paymentMethod(payment.getPaymentMethod())
+                .paymentDate(payment.getPaymentDate())
+                .status(payment.getPaymentStatus().name())
+                .build();
     }
 
-    private PaymentResponse mapToResponse(PaymentTransaction tx, String equipmentName) {
+    private PaymentResponse mapToResponse(Payment payment) {
         return PaymentResponse.builder()
-                .id(tx.getId())
-                .bookingId(tx.getBookingId())
-                .farmerId(tx.getFarmerId())
-                .partnerId(tx.getPartnerId())
-                .equipmentName(equipmentName)
-                .amount(tx.getAmount())
-                .paymentStatus(tx.getPaymentStatus())
-                .paymentReference(tx.getPaymentReference())
-                .paymentMethod(tx.getPaymentMethod())
-                .createdAt(tx.getCreatedAt())
-                .updatedAt(tx.getUpdatedAt())
+                .id(payment.getId())
+                .bookingId(payment.getBookingId())
+                .farmerId(payment.getFarmerId())
+                .partnerId(payment.getPartnerId())
+                .amount(payment.getAmount())
+                .paymentMethod(payment.getPaymentMethod())
+                .paymentReference(payment.getPaymentReference() != null ? payment.getPaymentReference() : payment.getTransactionId())
+                .transactionId(payment.getTransactionId())
+                .paymentStatus(payment.getPaymentStatus())
+                .paymentDate(payment.getPaymentDate())
+                .createdAt(payment.getCreatedAt() != null ? payment.getCreatedAt() : payment.getPaymentDate())
+                .updatedAt(payment.getUpdatedAt() != null ? payment.getUpdatedAt() : payment.getPaymentDate())
+                .invoiceReference(payment.getInvoiceReference())
                 .build();
     }
 }
